test_case/rust-lang_rust/79495_748560577.rs

#[repr(usize)]
enum MyWeirdOption<T> {
    None,
    Some = std::mem::size_of::<T>(),
    //~^ ERROR constant expression depends on a generic parameter
}
